Change content for resume

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name="author" content="Mannat Theme">
 
 	<!-- PAGE TITLE -->
-	<title>Addis Personal Portfolio</title>
+	<title>Luka Chuan Personal Portfolio</title>
 
 	<!-- BOOTSTRAP CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -71,7 +71,7 @@
 					<div class="col-md-3 col-sm-12">
 						<!-- START LOGO -->
 						<div class="logo">
-							<a href="index-2.html"><span>A</span>DDIS</a>
+							<a href="index-2.html"><span>L</span>UKA</a>
 						</div>
 						<!-- END LOGO -->
 					</div>
@@ -126,8 +126,8 @@
 						<div class="row">
 							<div class="col-md-12 col-xs-12">
 								<div class="header-text text-center">
-									<h2>Addis Belete</h2>
-									<p>I'm Software Engineer</p>
+									<h2>Luka Chuan</h2>
+									<p>I'm Senior React, React Native Developer</p>
 									<div class="social-links header-links">
 										<ul>
 											<li><a href="https://www.facebook.com/addis.bel/"><i
@@ -169,23 +169,34 @@
 					<div class="introduce">
 						<h2 class="title">Personal Details</h2>
 
-						<p>I'm Addis
-							I'am Software Developer
-							I can help you build a product, feature or website Look through some of my work and
-							experience!
-							If you like what you see and have a project you need to be coded,
-							don’t hesitate to contact me.</p>
+						<p>This is Luka, a senior React, React Native developer with over
+							5 years of professional experience. He has worked across the
+							entire development lifecycle and specializes in both front end
+							and back end. He is meticulous with implementation details while
+							always considering and balancing broader stakeholder concerns.
+							Communication wise, He is a prompt, relevant, and professional.
+							With a Bachelor's degree in Computer Science, He knows what it
+							takes to come up with solutions to complex problems and then solve
+							them effectively.
+							As a skilled, communicative web developer with over three years of
+							experience in both startup and corporate environments, He believes
+							that great results come as a product of great passion. His drive,
+							positive attitude, and proactive approach help him deliver these
+							results in a very natural way</p>
 
 						<div class="presonal-inform">
 							<ul>
-								<li><b>Name:</b>Addis Belete</li>
+								<li><b>Name:</b>Luka Chuan</li>
+								<!--
 								<li><b>Phone:</b>(251)_943_4138_49</li>
 								<li><b>Email:</b>Addis.bel@gmail.com</li>
 								<li><b>Date of Birth:</b> 9 August 1995</li>
 								<li><b>Address:</b>Inox Box 1445, Addis Ababa.</li>
 								<li><b>Nationality:</b>Ethiopian</li>
 								<li><b>Job:</b>Frelancer</li>
-								<li><b>Languages:</b>English, Amharic, Oromiffa</li>
+-->
+								<li><b>Languages:</b>English</li>
+
 							</ul>
 						</div>
 					</div>
@@ -193,7 +204,7 @@
 
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="about-img">
-						<img src="images/about-me.jpg" class="img-responsive img-thumbnail" alt="About-image">
+						<img src="images/about-me.jpeg" class="img-responsive img-thumbnail" alt="About-image">
 					</div>
 				</div>
 			</div>
@@ -277,11 +288,30 @@
 								<i class="pe-7s-diamond"></i>
 							</div>
 							<div class="rex-item">
-								<h3>2020-2021</h3>
-								<h4>Junior Vehicle Assembler</h4>
-								<p>Assembled more than 400 vehicles for my company with my colleagues.
-									Worked with a team that has 24 members and gained good communication skills,
-									teamwork skills, and leadership skills.
+								<h3>March 2021 - Present</h3>
+								<h4>Senior React, React Native + GraphQL, TypeScript Developer</h4>
+								<p><b>Front-end and back-end development:</b>
+									React, React Native
+									Bootstrap, Material UI, Semantic UI, Tailwind CSS
+									Node.js, Express.js, LoopBack, GraphQL
+									PHP, Laravel, Codeigniter, Symfony, CakePHP, Zend
+									HTML5, CSS3(SCSS/SASS/LESS)
+									Pure JavaScript, ECMAScript(ES6/ES7/ES8), TypeScript
+									MySQL, MongoDB, MSSQL, PostgreSQL
+									Firebase, AWS, Heroku <br>
+									<b>React Experience:</b>
+									Core Libraries - react-dom, react-router-dom , react-scripts
+									Redux Libraries - react-redux, redux-form, redux-saga, redux-thunk
+									MobX Libraries - mobx-react
+									UI Libraries - styled-components, react-bootstrap, material-ui, semantic-uireact,
+									Chart Libraries - react-d3, recharts, react-highcharts
+									Google Map Libraries - google-maps-react, geocoder
+									HTTP Clients – axios, fetch, ajax <br>
+									<b>Unit Testing Frameworks:</b>
+									Jest,
+									Enzyme,
+									Mocha
+
 								</p>
 							</div>
 						</div>
@@ -298,7 +328,8 @@
 							<div class="rex-item">
 								<h3>February 2021 - Present</h3>
 								<h4>Web developer</h4>
-								<p>Built 30+ projects within the last six months. • Used Test Driven Development to make it easier to scale the project and refactor the code.</p>
+								<p>Built 30+ projects within the last six months. • Used Test Driven Development to make
+									it easier to scale the project and refactor the code.</p>
 							</div>
 						</div>
 					</div>
@@ -315,9 +346,11 @@
 								<h3>March 2021-present</h3>
 								<h4>Mentor(Volunteer)</h4>
 								<p>Mentored junior web developers, providing technical support through code reviews.
-Proposed improvements to code organization to improve code quality and overall performance.
-Provided advice and tips on how to maintain motivation to maintain longevity in the program.
-</p>
+									Proposed improvements to code organization to improve code quality and overall
+									performance.
+									Provided advice and tips on how to maintain motivation to maintain longevity in the
+									program.
+								</p>
 							</div>
 						</div>
 					</div>
@@ -342,7 +375,7 @@ Provided advice and tips on how to maintain motivation to maintain longevity in 
 			<!--end row-->
 			<div class="row">
 				<!-- START SINGLE SERVICE DESIGN AREA -->
-<!--
+				<!--
 				<div class="col-md-3 col-sm-6">
 					<div class="single-service">
 						<p><span class="fa fa-handshake-o service-icon"></span></p>
@@ -360,7 +393,7 @@ Provided advice and tips on how to maintain motivation to maintain longevity in 
 							making this the first.</p>
 					</div>
 				</div>
-<!--
+				<!--
 				<div class="col-md-3 col-sm-6">
 					<div class="single-service">
 						<p><span class="fa fa-codiepie service-icon"></span></p>
@@ -406,9 +439,9 @@ Provided advice and tips on how to maintain motivation to maintain longevity in 
 						<li class="fil-cat" data-rel="web">Html / CSS</li>
 						<li class="fil-cat" data-rel="js">JavaScript</li>
 						<li class="fil-cat" data-rel="wordpress">Wordpress</li>
-<li class="fil-cat" data-rel="js">Ruby </li>
-<li class="fil-cat" data-rel="js">Ruby on Rails</li>
-<li class="fil-cat" data-rel="js">React</li>
+						<li class="fil-cat" data-rel="js">Ruby </li>
+						<li class="fil-cat" data-rel="js">Ruby on Rails</li>
+						<li class="fil-cat" data-rel="js">React</li>
 					</ul>
 				</div>
 				<div class="col-md-12 col-xs-12">
@@ -442,14 +475,14 @@ Provided advice and tips on how to maintain motivation to maintain longevity in 
 						</div>
 						<div class="lrs-project scale-anm js wordpress all" data-toggle="modal" data-target="#one">
 							<div class="lrs-project-image">
-								<img src="images/port/4.png" class="img-responsive" alt="Resume / CV" height="250px"/>
+								<img src="images/port/4.png" class="img-responsive" alt="Resume / CV" />
 								<div class="lrs-project-content">
 									<h6 class="lrs-project-title">BOOK STORE</h6>
 									<p class="lrs-project-client"><b>REACT PROJECT</b></p>
 								</div>
 							</div>
 						</div>
-<!--
+						<!--
 						<div class="lrs-project scale-anm web all" data-toggle="modal" data-target="#one">
 							<div class="lrs-project-image">
 								<img src="images/port/5.jpg" class="img-responsive" alt="Resume / CV" />
@@ -493,9 +526,9 @@ Provided advice and tips on how to maintain motivation to maintain longevity in 
 				</div>
 			</div>
 -->
-			<!--end row-->
-		</div>
-		<!--end container-->
+						<!--end row-->
+					</div>
+					<!--end container-->
 	</section>
 	<!--  END Portfolios -->
 
