Change content and comment out unneccessary htmls

--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
 									<p>I'm Senior React, React Native Developer</p>
 									<div class="social-links header-links">
 										<ul>
-											<li><a href="https://www.facebook.com/addis.bel/"><i
-														class="fa fa-facebook"></i></a></li>
+											<li><a href="https://www.facebook.com/addis.bel/"><i class="fa fa-linkedin"></i></a></li>
 											<li><a href="https://twitter.com/Addis32018084"><i
 														class="fa fa-twitter"></i></a></li>
 											<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
@@ -326,35 +325,140 @@
 								<i class="pe-7s-door-lock"></i>
 							</div>
 							<div class="rex-item">
-								<h3>February 2021 - Present</h3>
-								<h4>Web developer</h4>
-								<p>Built 30+ projects within the last six months. • Used Test Driven Development to make
-									it easier to scale the project and refactor the code.</p>
+								<h3>November 2018 - February 2021</h3>
+								<h4>Senior React, React Native + GraphQL, Node, Laravel Developer</h4>
+								<p><b>Technologies:</b> React, React Native, Gatsby, GraphQL, Laravel, PostgreSQL,
+									Node, AWS <br>
+									Reduced development effort by 30% by re-architecting the product using
+									100% JavaScript (Node.js, React, and React Native), where every engineer is
+									a full-stack one and can work on any portion of the system.<br>
+									Designed the React Native app to be a dual app and specifically made it so
+									that it can be turned into an iOS app with minimal effort.<br>
+									Refactored and upgraded the continuous integration code of an existing
+									front-end app based on React, Redux, and Gatsby.<br>
+									Developed the back-end APIs using Node.js and implemented them.<br>
+									Designed the AWS-based infrastructure, including servers, storage, cache,
+									and monitoring<br>
+									Worked on the technical team to develop, test, and deploy web, android,
+									and iOS applications through the Agile development process.</p>
 							</div>
 						</div>
 					</div>
 				</div>
-
-				<!-- Right Services -->
+				<!--1-->
 				<div class="row">
-					<div class="col-sm-6 pull-right rex-right">
-						<div class="colam-tird">
-							<div class="rs-round">
-								<i class="pe-7s-rocket"></i>
+					<div class="col-sm-6 pull-right rex-left">
+						<div class="colam">
+							<div class="rs-round second">
+								<i class="pe-7s-door-lock"></i>
 							</div>
 							<div class="rex-item">
-								<h3>March 2021-present</h3>
-								<h4>Mentor(Volunteer)</h4>
-								<p>Mentored junior web developers, providing technical support through code reviews.
-									Proposed improvements to code organization to improve code quality and overall
-									performance.
-									Provided advice and tips on how to maintain motivation to maintain longevity in the
-									program.
+								<h3>March 2017 - October 2018 </h3>
+								<h4>Senior React + GraphQL, Node Developer</h4>
+								<p><b>Technologies:</b> React, Redux, TypeScript, GraphQL Node.js, Express, AWS,
+									Firebase<br>
+									Led the front-end developers—doing code reviews to achieve maintainable
+									and high-quality code<br>
+									Migrated from Redux state management system to the combo of Apollo &
+									React context API<br>
+									Developed and maintained multi-tier, duo-core back-end of Node.js,
+									GraphQL and Firebase<br>
+									Integrated AWS Cognito for student authentication including the guest role<br>
+									Used Webpack to inject a hash to each bundle name to invalidate bundles
+									on the client-side as changes are made.<br>
+									Wrote 25 Firebase and GraphQL queries respectively<br>
+									Migrated from Express-based REST API to GraphQL<br>
+									Migrated from Socket.io to Firebase real-time DB for instant messaging
+
 								</p>
 							</div>
 						</div>
 					</div>
 				</div>
+				<!--2-->
+				<div class="row">
+					<div class="col-sm-6 pull-left rex-left">
+						<div class="colam">
+							<div class="rs-round second">
+								<i class="pe-7s-door-lock"></i>
+							</div>
+							<div class="rex-item">
+								<h3>December 2015 - February 2017</h3>
+								<h4>Senior React + Laravel Developer</h4>
+								<p><b>Technologies:</b> React, Redux, Redux Thunk, Laravel, AWS, Unit Testing,<br>
+									Built the app architecture and design system components.<br>
+									Created custom React components for front-end.<br>
+									Used Redux for state management and SASS & Material-UI for designs<br>
+									Developed the Back-End APIs using Laravel and integrated them into the
+									front-end.<br>
+									Used Algolia Realtime Search for Search Engine<br>
+									Used Quantcast to implemented AI-driven real-time advertising, audience
+									insights, and measurement<br>
+									Optimized the JavaScript code to achieve a maximum speed between
+									when the data is received and when the coupons are displayed<br>
+									Deployed the app to the Amazon EC2 instance<br>
+									Added a hot module replacement plugin to Webpack<br>
+									Worked with legacy code on the server-side, able to understand the
+									principles behind it and make it work again.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!--3-->
+				<div class="row">
+					<div class="col-sm-6 pull-right rex-left">
+						<div class="colam">
+							<div class="rs-round second">
+								<i class="pe-7s-door-lock"></i>
+							</div>
+							<div class="rex-item">
+								<h3>August 2013 - October 2015 </h3>
+								<h4>Senior Full Stack Developer</h4>
+								<p><b>Technologies:</b> JavaScript, PHP, MySQL, Node, HTML, CSS<br>
+									Created a photo and video contest web app for a US startup, users could
+									upload photos and videos and could participate in contests where the best
+									upload would get prizes<br>
+									Developed a microservices-based architecture built in PHP, Laravel,
+									MySQL, and JavaScript<br>
+									Created a number of responsive web apps and pages<br>
+									Contributed as part of the team that developed a new webshop app for a
+									large retailer in Croatia.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+<!--4-->
+	<div class="row">
+					<div class="col-sm-6 pull-left rex-left">
+						<div class="colam">
+							<div class="rs-round second">
+								<i class="pe-7s-rocket"></i>
+							</div>
+							<div class="rex-item">
+									<h3>March 2011 - July 2013</h3>
+								<h4>Javascript Developer</h4>
+								<p><b>Technologies:</b> HTML, CSS, Java, JavaScript, jQuery, JSON, Ajax, SQL
+									Server<br>
+									Involved in development of UI using HTML/HTML5, CSS/CSS3,
+									JavaScript, and jQuery, AJAX, JSON.<br>
+									Involved in writing application level code to interact with APIs, Web
+									Services using AJAX, JSON, and XML.<br>
+									Created reusable templates and style sheets based on UI standards and
+									guidelines. Performed functional tasks using specifications and wireframes.<br>
+									Extensively used Debugging JavaScript using Chrome developer Toolbar,
+									Firebug
+
+
+
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Right Services -->
+			
 			</div>
 		</div>
 		<!--end container-->
@@ -362,6 +466,7 @@
 	<!-- END RESUME -->
 
 	<!-- START SERVICES  -->
+<!--
 	<section id="service" class="section bg-dark">
 		<div class="container">
 			<div class="row">
@@ -372,6 +477,7 @@
 					</div>
 				</div>
 			</div>
+-->
 			<!--end row-->
 			<div class="row">
 				<!-- START SINGLE SERVICE DESIGN AREA -->
@@ -384,7 +490,7 @@
 							embarrassing hidden.</p>
 					</div>
 				</div>
--->
+
 				<div class="col-md-3 col-sm-6">
 					<div class="single-service">
 						<p><span class="fa fa-snowflake-o service-icon"></span></p>
@@ -393,6 +499,7 @@
 							making this the first.</p>
 					</div>
 				</div>
+-->
 				<!--
 				<div class="col-md-3 col-sm-6">
 					<div class="single-service">
@@ -402,7 +509,7 @@
 							classical Latin literature.</p>
 					</div>
 				</div>
--->
+
 				<div class="col-md-3 col-sm-6">
 					<div class="single-service">
 						<p><span class="fa fa-umbrella service-icon"></span></p>
@@ -412,6 +519,7 @@
 					</div>
 				</div>
 			</div>
+-->
 			<!--end row-->
 		</div>
 		<!--end container-->
@@ -420,6 +528,7 @@
 
 
 	<!-- START Portfolios -->
+<!--
 	<section id="work" class="section">
 		<div class="container">
 			<div class="row">
@@ -430,7 +539,9 @@
 					</div>
 				</div>
 			</div>
+-->
 			<!--end row-->
+<!--
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="lrs-divider-3"></div>
@@ -482,7 +593,7 @@
 								</div>
 							</div>
 						</div>
-						<!--
+						
 						<div class="lrs-project scale-anm web all" data-toggle="modal" data-target="#one">
 							<div class="lrs-project-image">
 								<img src="images/port/5.jpg" class="img-responsive" alt="Resume / CV" />
@@ -534,6 +645,7 @@
 
 
 	<!-- START Clients -->
+<!--
 	<section id="Clients" class="section bg-dark">
 		<div class="container">
 			<div class="row">
@@ -544,7 +656,9 @@
 					</div>
 				</div>
 			</div>
+-->
 			<!--end row-->
+<!--
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="testimonial-list">
@@ -577,6 +691,7 @@
 					</div>
 				</div>
 			</div>
+-->
 			<!--end row-->
 		</div>
 		<!--end container-->
@@ -584,6 +699,7 @@
 	<!--  END Clients -->
 
 	<!-- START blog page -->
+<!--
 	<section id="blog" class="blog-area section">
 		<div class="container area">
 			<div class="row">
@@ -594,7 +710,9 @@
 					</div>
 				</div>
 			</div>
+-->
 			<!--end row-->
+<!--
 			<div class="row">
 				<div class="col-md-4 col-sm-6 colblog">
 					<div class="blog-containes">
@@ -676,13 +794,14 @@
 					</div>
 				</div>
 			</div>
+-->
 			<!--end row-->
 		</div>
 		<!--end container-->
 	</section>
 	<!-- END blog page -->
 
-	<!-- START contect -->
+	<!-- START contact -->
 	<section id="contact" class="section bg-dark">
 		<div class="container area">
 			<div class="row">
