add linkdedin link

--- a/index.html
+++ b/index.html
@@ -99,11 +99,7 @@
 										</li>
 										<li><a class="smoth-scroll" href="#resume">Resume</a>
 										</li>
-										<li><a class="smoth-scroll" href="#service">service</a>
-										</li>
-										<li><a class="smoth-scroll" href="#work">Work</a>
-										</li>
-										<li><a class="smoth-scroll" href="#blog">blogs</a>
+										
 										</li>
 										<li><a class="smoth-scroll" href="#contact">Contact</a>
 										</li>
@@ -130,8 +126,8 @@
 									<p>I'm Senior React, React Native Developer</p>
 									<div class="social-links header-links">
 										<ul>
-											<li><a href="https://www.facebook.com/addis.bel/"><i class="fa fa-linkedin"></i></a></li>
-											<li><a href="https://twitter.com/Addis32018084"><i
+											<li><a href="linkedin.com/in/luka-chuan-360b4b1b1"><i class="fa fa-linkedin"></i></a></li>
+											<li><a href="#"><i
 														class="fa fa-twitter"></i></a></li>
 											<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 											<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
@@ -859,7 +855,7 @@
 				<div class="col-sm-12 text-center">
 					<div class="social-links">
 						<ul>
-							<li><a href="#"><i class="fa fa-facebook footer-link"></i></a></li>
+							<li><a href="linkedin.com/in/luka-chuan-360b4b1b1"><i class="fa fa-linkedin footer-link"></i></a></li>
 							<li><a href="#"><i class="fa fa-twitter footer-link"></i></a></li>
 							<li><a href="#"><i class="fa fa-google-plus footer-link"></i></a></li>
 							<li><a href="#"><i class="fa fa-dribbble footer-link"></i></a></li>
